--- a/app/src/main/res/layout/content_note_list.xml
+++ b/app/src/main/res/layout/content_note_list.xml
@@ -7,13 +7,13 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
 app:layout_behavior="@string/appbar_scrolling_view_behavior"
-tools:context="com.example.merve.dbdemo.NoteListActivity"
+tools:context="com.example.merve.notepad_sqlite.NoteListActivity"
 tools:showIn="@layout/activity_note_list">
 <ListView
     android:id="@+id/lvNote"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="20dp"
+    android:textSize="20sp"
     android:scrollbarSize="100dp"
     android:divider="@color/colorAccent"
     android:dividerHeight="2dp">
