--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -8,14 +8,14 @@
     <TextView
         android:id="@+id/tvID"
         android:gravity="center"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:padding="10dp"
         android:layout_width="50dp"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:padding="10dp"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:id="@+id/tvTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
